--- a/bigwebsite/index.html
+++ b/bigwebsite/index.html
@@ -49,7 +49,7 @@
 
   <div class="section" id="goRight">
     <p class="title">Step 2</p>
-    <p>Good, now keep scrolling to the right.</p>
+    <p>Good, now keep scrolling to down and to the right.</p>
     <p>Click when you find it.</p>
   </div>
 
